--- a/charts/stardog/templates/statefulset.yaml
+++ b/charts/stardog/templates/statefulset.yaml
@@ -55,6 +55,7 @@ spec:
                   - {{ include "stardog.fullname" . }}
               topologyKey: "kubernetes.io/hostname"
         {{- end }}
+{{ if .Values.initContainers.enabled }}
       initContainers:
       - name: wait-for-zk
         image: busybox
@@ -78,6 +79,7 @@ spec:
         {{ else }}
           echo "Using existing zookeeper"
         {{ end }}
+{{ end }}
       containers:
       - name: {{ include "stardog.fullname" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}{{ if .Values.image.registry }}
