--- a/charts/stardog/files/stardog.properties
+++ b/charts/stardog/files/stardog.properties
@@ -1,2 +1,5 @@
 logging.audit.enabled=true
-logging.audit.type=text
+logging.audit.type=binary
+logging.audit.rotation.type = size
+logging.audit.rotation.limit = 200000
+
