--- a/charts/stardog/Chart.yaml
+++ b/charts/stardog/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: stardog
 description: Helm chart to deploy Stardog Cluster and associated services
-version: 1.0.1
+version: 1.0.11
 appVersion: latest
 home: https://github.com/stardog-union/helm-charts
 icon: https://s3.amazonaws.com/stardog-logos.public/stardog-logo.png
@@ -11,6 +11,6 @@ maintainers:
     url: https://www.stardog.com
 dependencies:
   - name: zookeeper
-    version: 2.1.3
-    repository: http://storage.googleapis.com/kubernetes-charts-incubator
+    version: 2.1.6
+    repository: https://charts.helm.sh/incubator
     condition: zookeeper.enabled
